--- a/retype.yml
+++ b/retype.yml
@@ -3,7 +3,7 @@ output: .retype
 url: # Add your website address here
 branding:
   title: Tickript
-  label: Docs
+  label: Developer Docs
 links:
 - text: Getting Started
   link: https://retype.com/guides/getting-started/
